<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold"
            android:text="@string/settingsMenu"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:id="@+id/numberOfPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/numberOfPage"
                android:textSize="20sp"/>

        <EditText
                android:id="@+id/numberOfPageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="1"
                android:hint="@string/defaultNumberOfPage" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:id="@+id/numberPerPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/numberPerPage"
                android:textSize="20sp"/>

        <EditText
                android:id="@+id/numberPerPageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="10"
                android:hint="@string/defaultNumberPerPage" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:id="@+id/orderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderSettings"
                android:textSize="20sp"/>

        <Spinner
                android:id="@+id/orderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</LinearLayout>